@@ -1,3 +1,7 @@
+2003-03-21  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
+
+	* src/rbart_svp.c (vpath_to_svp): Remove the function.
+
 2003-03-19  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
 
 	* src/libart2.def: Add a file.
